# danish-pronunciation-lookup-tool

./: Cargo.toml  phones.txt
src/: main.rs
