[package]
name = "danish-pronunciation-lookup-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.19", features = ["derive"] }
fs-err = "2.9.0"
itertools = "0.10.5"
